# MacroKeyB

./: README.md  package.json
.github/ISSUE_TEMPLATE/: bug_report.md
.svelte-kit/: ambient.d.ts
.svelte-kit/output/client/.vite/: manifest.json
.svelte-kit/output/client/_app/: version.json
.svelte-kit/output/client/_app/immutable/assets/: 2.CYeiB-vI.css  2.nWLkV0zC.css
.svelte-kit/output/client/_app/immutable/chunks/: B7D040BA.js  Bt067wpS.js  CkGDGDXt.js  D9SFZBKc.js  DD5P0bqb.js  FyKIkh1t.js  VsunoRPk.js
.svelte-kit/output/client/_app/immutable/entry/: app.BqMmfzu5.js  (+2 more)
.svelte-kit/output/server/: index.js  manifest-full.js  manifest.js
.svelte-kit/output/server/.vite/: manifest.json
.svelte-kit/output/server/chunks/: index.js  index2.js  internal.js
.svelte-kit/output/server/entries/fallbacks/: error.svelte.js
.svelte-kit/output/server/entries/pages/: _page.svelte.js
.svelte-kit/output/server/nodes/: 0.js  1.js  2.js
src/: app.html
src-tauri/: Cargo.toml  items.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/macroeng/: Cargo.toml
src-tauri/macroeng/src/: event_handler.rs  keyboard_listener.rs  keyboard_trigger.rs  lib.rs  lua_manager.rs
src-tauri/src/: frontend.rs  lib.rs  main.rs
src/routes/: +page.svelte  codeMirrorModification.ts  codemirror.css
src/routes/components/: ListBox.svelte  ListBoxItem.svelte  ListBoxItemData.ts
src/routes/dialogs/: DetectKeyboardDialog.svelte  MessageBoxDialog.svelte  dialogManager.ts
src/routes/stores/: eventStore.ts
static/: app.css
(+3 files in other folders)
