[package]
name = "macroeng"
version = "0.1.0"
edition = "2024"

[dependencies]
x11rb = { version = "0.11.1", features = ["xtest"] }
mlua = { version = "0.10", features = ["lua54", "vendored"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2.172"
ctrlc = "3.2"
tauri = { version = "2.5.1", features = [ "tray-icon" ] }
clipboard = "0.4.6"